--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>The Blogging App</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    
+
+    <form action="/login" action="POST">
+        <label for="username">Username: </label><input type="text" name="username">
+        <label for="password">Pasword: </label><input type="text" name="password">
+        <button type="submit">Register</button>
+    </form>
