--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,4 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
-  background: red;
+  font-family: "Roboto", sans-serif;
 }
 /*# sourceMappingURL=style.css.map */
