--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -1,3 +1,11 @@
+$roboto: 'Roboto', sans-serif;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background: red;
+    font-family: $roboto;
 }
