--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,10 @@
-welcome to the app
+<%- include('includes/header.ejs') %>
+
+<form action="/registration" action="POST">
+    <label for="username">Username: </label><input type="text" name="username">
+    <label for="email">Email: </label><input type="text" name="email">
+    <label for="password">Pasword: </label><input type="text" name="password">
+    <button type="submit">Register</button>
+</form>
+
+<%- include('includes/footer.ejs') %>
