--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <form action="/login" action="POST">
+    <form action="/login" method="POST">
         <label for="username">Username: </label><input type="text" name="username">
         <label for="password">Pasword: </label><input type="text" name="password">
         <button type="submit">Register</button>
