--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -13,5 +13,5 @@
     <form action="/login" method="POST">
         <label for="username">Username: </label><input type="text" name="username">
         <label for="password">Pasword: </label><input type="text" name="password">
-        <button type="submit">Register</button>
+        <button type="submit">Login</button>
     </form>
