--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -12,6 +12,6 @@
 
     <form action="/login" method="POST">
         <label for="username">Username: </label><input type="text" name="username">
-        <label for="password">Pasword: </label><input type="text" name="password">
+        <label for="password">Pasword: </label><input type="password" name="password">
         <button type="submit">Login</button>
     </form>
