--- a/views/landing-page.ejs
+++ b/views/landing-page.ejs
@@ -7,4 +7,12 @@
     <button type="submit">Register</button>
 </form>
 
+<!-- flash errors -->
+<% errors.forEach(function(message) { 
+    %>
+
+<p><%= message %></p>
+
+<% }) %>
+
 <%- include('includes/footer.ejs') %>
