--- a/views/logged-in-landing.ejs
+++ b/views/logged-in-landing.ejs
@@ -2,3 +2,6 @@
     <input type="hidden" name="" value="">
     <button type="submit">Log Out</button>
 </form>
+
+
+<a href="/create-post">Create Post</a>
