--- a/views/create-post.ejs
+++ b/views/create-post.ejs
@@ -1,11 +1,17 @@
-<form action="/create-post" method="POST">
-    <input type="text" name="title">
-    <textarea name="body" cols="30" rows="10"></textarea>
-    <button type="submit">Save New Post</button>
-</form>
+<div>
+    <form action="/create-post" method="POST">
+        <div class ="form-group">
+            <input type="text" name="title">
+            <br>
+            <textarea name="body" cols="30" rows="10"></textarea>
+            <br/>
+
+            <button type="submit">Save New Post</button></div>
+    </form>
+</div>
 
 <% success.forEach(function(message) { %>
 
-    <p><%= message %></p>
-    
+<p><%= message %></p>
+
 <% }) %>
