--- a/views/landing-page.ejs
+++ b/views/landing-page.ejs
@@ -4,7 +4,7 @@
     <!-- flash errors -->
     <% errors.forEach(function(message) { 
     %>
-    <p class="alert alert-info" role="alert"><%= message %></p>
+    <p class="alert alert-danger" role="alert"><%= message %></p>
     <% }) %>
 
     <form action="/login" method="POST">
