--- a/views/create-post.ejs
+++ b/views/create-post.ejs
@@ -1,12 +1,16 @@
-<div>
+<%- include('includes/header.ejs') %>
+<div class="container-fluid">
     <form action="/create-post" method="POST">
-        <div class ="form-group">
-            <input type="text" name="title">
+        <div class ="form-col">
+            <label for="title">Title: 
+                <input type="text"  class="form-control" aria-label="title" aria-describedby="inputTitle"
+                placeholder="Enter Title" id="inputTitle" name="title"></label>
             <br>
-            <textarea name="body" cols="30" rows="10"></textarea>
+            <label for="Post">Post
+                <textarea  class="form-control" aria-label="post" aria-describedby="createPost"
+                placeholder="Create Post" id="inputPost"  name="body" cols="30" rows="10"></textarea></label>
             <br/>
-
-            <button type="submit">Save New Post</button></div>
+            <button type="submit" class="btn btn-success">Save New Post</button></div>
     </form>
 </div>
 
@@ -15,3 +19,5 @@
 <p><%= message %></p>
 
 <% }) %>
+
+<%- include('includes/footer.ejs') %>
